apps/system/security/crowdsec/bouncer-unifi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdsec-unifi-bouncer
  namespace: security
  labels:
    app.kubernetes.io/name: crowdsec-unifi-bouncer
    app.kubernetes.io/instance: crowdsec-unifi-bouncer
    app.kubernetes.io/part-of: crowdsec
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: crowdsec-unifi-bouncer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crowdsec-unifi-bouncer
        app.kubernetes.io/instance: crowdsec-unifi-bouncer
        app.kubernetes.io/part-of: crowdsec
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bouncer
          image: ghcr.io/teifun2/cs-unifi-bouncer:v1.4.0@sha256:6d68590366ed57b38bc4c30b99849299b686023174e58847ccc94059ab9d5f2b
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
