apps/system/security/crowdsec/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-policy
  namespace: security
spec:
  endpointSelector:
    matchLabels:
      k8s-app: crowdsec
  ingress:
    # 1. Allow agents and bouncers to talk to LAPI port 8080
    - fromEndpoints:
        # Allow LAPI/Agent pods in 'security' namespace
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
            k8s-app: crowdsec
        # Allow Traefik bouncers in 'traefik' namespace
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: "TCP"
            - port: "7422"
              protocol: "TCP"
    # 2. Allow kubelet health probes
    - fromEntities:
        - "host"
        - "health"
    # 3. Allow all pods in security namespace (e.g. helm test pods) to reach LAPI / Agent / AppSec
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "8080"
              protocol: "TCP"
            - port: "6060"
              protocol: "TCP"
            - port: "7422"
              protocol: "TCP"
    # 4. Allow Prometheus scraping from observability namespace
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "6060"
              protocol: "TCP"

  egress:
    # 1. Allow egress to external PostgreSQL database
    - toCIDR:
        - "10.10.1.218/32"
      toPorts:
        - ports:
            - port: "15432"
              protocol: "TCP"


    # 3. Allow egress to CAPI (public internet) and K8s API server
    - toEntities:
        - "world"
        - "kube-apiserver"

    # 4. Allow LAPI/Agent pods to talk to each other on LAPI port 8080
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
            k8s-app: crowdsec
      toPorts:
        - ports:
            - port: "8080"
              protocol: "TCP"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-security-namespace-egress
  namespace: security
spec:
  endpointSelector:
    matchLabels:
      k8s-app: crowdsec
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
            k8s-app: crowdsec
      toPorts:
        - ports:
            - port: "8080"
              protocol: "TCP"
            - port: "6060"
              protocol: "TCP"
            - port: "7422"
              protocol: "TCP"

---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-unifi-bouncer-policy
  namespace: security
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crowdsec-unifi-bouncer
  egress:
    # 1. Allow egress to UniFi gateway API
    - toCIDR:
        - "10.10.1.1/32"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
    # 2. Allow egress to CrowdSec LAPI
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
            k8s-app: crowdsec
      toPorts:
        - ports:
            - port: "8080"
              protocol: "TCP"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-prune-policy
  namespace: security
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crowdsec-prune
  egress:
    - toEntities:
        - "kube-apiserver"
